--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,14 @@
     "background": {
         "service_worker": "background.js"
     },
+    "host_permissions": [
+        "https://*/*",
+        "http://*/*"
+    ],
     "permissions": [
         "activeTab",
         "storage",
-        "cookies"
+        "cookies",
+        "tabs"
     ]
 }
