--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Pangaea DevTools",
+    "name": "Pangea DevTools",
     "version": "0.0.2",
     "devtools_page": "pdt.html",
     "description": "Extends Chrome's DevTools by adding many Pangea's security-related services to it.",
